Program.cs code refactored

--- a/CaseTaskManager.UI/appsettings.json
+++ b/CaseTaskManager.UI/appsettings.json
@@ -1,9 +1,17 @@
 {
+  // Configuration for API calls from the Blazor UI
+  "Api": {
+    "BaseUrl": "https://localhost:7156/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
+
+  // Optional: future expansion (serilog, feature flags, etc.)
+  // "FeatureFlags": {
+  //   "EnableCaseAssignmentsPage": true
+  // }
 }
